@@ -14,10 +14,10 @@
 </head>
 <body>
   
-  <h1>SNMP Trap Translator v1.1beta2</h1>
+  <h1>SNMP Trap Translator v1.1</h1>
   
 <b>(<a href="http://www.snmptt.org">SNMPTT</a>)</b><br />
-This file was last updated on:&nbsp;December 10th, 2005
+This file was last updated on:&nbsp;January 17th, 2006
 <p><a href="#License">License</a></p>
 <p><a href="#What-is-it">SNMPTT</a></p>
 <blockquote><a href="#What-is-it">What is it?</a><br />
@@ -76,7 +76,7 @@ software</a><br />
 <b>&nbsp;&nbsp;</b> <a href="#Hobbit">Hobbit</a></blockquote>
 <br />
 <h2><a id="License" name="License"></a>License</h2>
-<p>Copyright 2002-2005 Alex Burger<br />
+<p>Copyright 2002-2006 Alex Burger<br />
 alex_b@users.sourceforge.net<br />
 4/3/2002</p>
 <p>This program is free software; you can redistribute it and/or modify<br />
@@ -235,14 +235,7 @@ variable names translated into symbolic form, want to be able to have
 Although not required, using the Perl module is recommended.</blockquote>
 <h2><a id="Whats-New" name="Whats-New"></a>What's New</h2>
 
-<h3><b>v1.1beta2</b> <b>- November 5th, 2005</b></h3>
-<ul>
-  <li><b>MATCH</b> statement now accepts any variable name instead of only enterprise variables.  Example: MATCH $s:(Normal)</li>
-  <li>Added <b>NODES MODE=</b> snmptt.conf file option to allow you to select either <b>POS</b> (positive - the default) or <b>NEG</b> (negative) for <b>NODES</b> matches.  If set to <b>NEG</b>, then <b>NODES</b> is a 'match' only if <i>none</i> of the <b>NODES</b> entries match.</li>
-  <li>Fixed bug in <b>NODES</b> where <b>NODES</b> entries from previous EVENTs were not being purged correctly.</li>
-</ul>  
-
-<h3><b>v1.1beta1</b> <b>- November 5th, 2005</b></h3>
+<h3><b>v1.1</b> <b>- January 17th, 2006</b></h3>
 <ul>
   <li>Added <b>PREEXEC</b> <b>snmptt.conf</b> file option to allow an external 
   program to be run before processing the FORMAT and EXEC lines.
@@ -252,6 +245,8 @@ Although not required, using the Perl module is recommended.</blockquote>
   command in <b>$p1</b>, the second in <b>$p2</b> etc.  Any ending newlines
   are removed.  The <b>snmptt.ini</b> parameter <b>pre_exec_enable</b> can be used
   to enable / disable it.</li>
+  <li><b>MATCH</b> statement now accepts any variable name instead of only enterprise variables.  Example: MATCH $s:(Normal)</li>
+  <li>Added <b>NODES MODE=</b> snmptt.conf file option to allow you to select either <b>POS</b> (positive - the default) or <b>NEG</b> (negative) for <b>NODES</b> matches.  If set to <b>NEG</b>, then <b>NODES</b> is a 'match' only if <i>none</i> of the <b>NODES</b> entries match.</li>
   <li>Added <b>unknown_trap_exec</b> <b>snmptt.ini</b> option.  If defined, the 
   command will be executed for ALL unknown traps.  Passed to the
   command will be all standard and enterprise variables, similar 
@@ -261,11 +256,12 @@ Although not required, using the Perl module is recommended.</blockquote>
   <li>If the debug log file can not be opened, a message is now logged
   to syslog if <b>syslog_system_enable</b> is enabled, and to the 
   Event Log if <b>eventlog_system_enable</b> is enabled</li>
-  <li>Fixed bug where <b>snmptt --dump</b> would attempt to log to syslog or the Event Log.
   <li>Fixed bug with PostgreSQL where some trap data was interpreted as 'placeholders'
   in the INSERT statement which caused logging errors.  PostgreSQL now uses
   PREPARE / EXECUTE statements instead.
   <li>MySQL now uses PREPARE / EXECUTE statements instead of a single INSERT statement.</li>
+  <li>Fixed bug in <b>NODES</b> where <b>NODES</b> entries from previous EVENTs were not being purged correctly.</li>
+  <li>Fixed bug where <b>snmptt --dump</b> would attempt to log to syslog or the Event Log.
   <li>Fixed bug that prevented the wildcard <b>.*</b> from being accepted on the EVENT line.</li>
   <li>Added Windows Event Log forwarding documentation to integration section.
   <li>SNMPTTConvertMIB:</li>
@@ -657,11 +653,11 @@ load</li>
 </ul>
 <h2><a id="Upgrading" name="Upgrading"></a>Upgrading</h2>
 
-<h3><b>v1.0 to v1.1beta1 or v1.1beta2</b></h3>
-<p>To upgrade from v1.0 to v1.1beta1, you should:</p>
+<h3><b>v1.0 to v1.1</b></h3>
+<p>To upgrade from v1.0 to v1.1, you should:</p>
 <ol>
   <li>Replace <b>snmptt</b> and <b>snmpttconvertmib</b> with the new versions
-  contained in the v1.1beta1 package.&nbsp; Make sure the files are executable
+  contained in the v1.1 package.&nbsp; Make sure the files are executable
   (<b>chmod +x <i>filename</i></b>).</li>
   <li>Backup your <b>snmptt.ini</b> file, replace it with the new version, and
   make any necessary configuration changes to it.</li>
