@@ -12,12 +12,12 @@
 <title>SNMP Trap Translator</title>
 </head>
 <body>
-<h1><b>SNMP Trap Translator Convert MIB v1.1beta2</b></h1>
+<h1><b>SNMP Trap Translator Convert MIB v1.1</b></h1>
 <b>(</b><a href=
 "http://www.snmptt.org"><b>SNMPTTCONVERTMIB</b></a><b>)</b><br />
 This file was last updated on:&nbsp; November 5th, 2005
 <h2><b>License</b></h2>
-<p>Copyright 2002-2005 Alex Burger<br />
+<p>Copyright 2002-2006 Alex Burger<br />
 alex_b@users.sourceforge.net<br />
 4/3/2002</p>
 <p>This program is free software; you can redistribute it and/or modify<br />
