@@ -1,8 +1,8 @@
 #!/usr/bin/perl
 #
-# SNMPTT v1.1beta2
+# SNMPTT v1.1
 #
-# Copyright 2002-2005 Alex Burger
+# Copyright 2002-2006 Alex Burger
 # alex_b@users.sourceforge.net
 # 4/11/2002
 #
@@ -46,12 +46,12 @@
 ##############################################################################
 #
 
-$snmptt_version = "v1.1beta2";
+$snmptt_version = "v1.1";
 
 sub showversion
 {
   print "\nSNMPTT $snmptt_version\n";
-  print "(c) 2002-2005 Alex Burger\n";
+  print "(c) 2002-2006 Alex Burger\n";
   print "http://snmptt.sourceforge.net\n\n";
 }
 
