@@ -1,8 +1,8 @@
 #!/usr/bin/perl
 #
-# SNMPTTCONVERT v1.1beta2
+# SNMPTTCONVERT v1.1
 #
-# Copyright 2002-2005 Alex Burger
+# Copyright 2002-2006 Alex Burger
 # alex_b@users.sourceforge.net
 # 
 # 4/11/2002
